style: hide scrollbars, fix head image width (#113)

--- a/css/article-example.css
+++ b/css/article-example.css
@@ -11,6 +11,16 @@
 html {
     margin: 0;
     padding: 0;
+
+    /* Hide scrollbar for IE, Edge and Firefox */
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+}
+
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+html::-webkit-scrollbar {
+  display: none;
 }
 
 .fc-body {
@@ -19,10 +29,11 @@ html {
     color: var(--text-color);
     text-rendering: optimizeLegibility;
     -webkit-font-smoothing: antialiased;
+
 }
 
 .fc-img {
-    width: 100vw;
+    width: 100%;
     height: 60vw;
 }
 
